--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -5,13 +5,24 @@
    "execution_count": 1,
    "id": "a56e2404",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import pickle\n",
     "import numpy as np\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "from jupyter_utils import jupyter_setup\n",
+    "import random\n",
+    "jupyter_setup()"
    ]
   },
   {
@@ -26,21 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ba8be4b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = os.environ.get(\"PATH\")\n",
-    "additional_path = 'C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Scripts;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\condabin'\n",
-    "min_additional_path = \"C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\bin;C:\\\\Users\\\\micha\\\\anaconda3\\\\envs\\\\ai38\\\\Library\\\\bin;\"\n",
-    "combined_path = min_additional_path + path\n",
-    "os.environ[\"PATH\"] = combined_path\n",
-    "import librosa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "e0760fb0",
    "metadata": {},
    "outputs": [],
@@ -89,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6b6493d3",
    "metadata": {},
    "outputs": [],
@@ -111,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "35333f94",
    "metadata": {},
    "outputs": [],
@@ -143,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "032f9f14",
    "metadata": {},
    "outputs": [],
@@ -178,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c9728145",
    "metadata": {},
    "outputs": [],
@@ -221,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b3577dea",
    "metadata": {},
    "outputs": [],
@@ -252,15 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "10c72e43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_dir = \"python\"\n",
-    "_, current_folder = os.path.split(os.getcwd())\n",
-    "if current_folder != root_dir:\n",
-    "    os.chdir(\"../\")"
+    "# root_dir = \"python\"\n",
+    "# _, current_folder = os.path.split(os.getcwd())\n",
+    "# if current_folder != root_dir:\n",
+    "#     os.chdir(\"../\")"
    ]
   },
   {
@@ -274,11 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a4451404",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -421,7 +415,7 @@
        "[3 rows x 36 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b03aa62e",
    "metadata": {},
    "outputs": [
@@ -598,7 +592,7 @@
        "[3 rows x 36 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2cb1d844",
    "metadata": {},
    "outputs": [
@@ -727,7 +721,7 @@
        "2                      2                    2.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f27a8759",
    "metadata": {},
    "outputs": [
@@ -756,7 +750,7 @@
        " Name: audio_quality_shallow_breathing, dtype: int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "941fb090",
    "metadata": {},
    "outputs": [
@@ -811,7 +805,7 @@
        "Name: covid_health_status, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "541e267e",
    "metadata": {},
    "outputs": [
@@ -842,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b5584559",
    "metadata": {
     "scrolled": true
@@ -1090,7 +1084,7 @@
        "4                     1.099  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "94f38f90",
    "metadata": {},
    "outputs": [
@@ -1182,18 +1176,6 @@
        "      <td>False</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01OCEf1yB4czsq8ygRoT51s96Ba2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>03TmwzsdEBVEh35MRMbC9d0NnfI3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1202,12 +1184,10 @@
        "                        user_id  recording_invalid  n_invalid_recordings\n",
        "0  00xKcQMmcAhX8CODgBBLOe7Dm0T2              False                     0\n",
        "1  01GtHP1FUbXKdWEUwApFdusuO773              False                     0\n",
-       "2  01n0u9YSkXQSkmN45J65eigyCMC3              False                     0\n",
-       "3  01OCEf1yB4czsq8ygRoT51s96Ba2              False                     0\n",
-       "4  03TmwzsdEBVEh35MRMbC9d0NnfI3              False                     0"
+       "2  01n0u9YSkXQSkmN45J65eigyCMC3              False                     0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1196,7 @@
     "invalid_recordings_df = get_invalid_recordings(recording_metadata_df)\n",
     "print(invalid_recordings_df.recording_invalid.value_counts())\n",
     "print(invalid_recordings_df.n_invalid_recordings.value_counts())\n",
-    "invalid_recordings_df.head()"
+    "invalid_recordings_df.head(3)"
    ]
   },
   {
@@ -1229,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "cc4f62fc",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "940ee6d5",
    "metadata": {},
    "outputs": [],
@@ -1337,28 +1317,155 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae8abc5e",
+   "cell_type": "markdown",
+   "id": "c84c859c-70f7-4bbb-af17-555265ae488e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# derive a 15% test set from valid recordings"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e42c360",
+   "execution_count": 17,
+   "id": "a973e2ce-a597-4596-b773-380c3b069488",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def randomly_split_list_into_two(input_list, ratio=0.8, random_seed=None):\n",
+    "    input_list_temp = input_list.copy()\n",
+    "    split_index = int(np.floor(len(input_list_temp) * ratio))\n",
+    "    random.Random(random_seed).shuffle(input_list_temp)\n",
+    "    return input_list_temp[:split_index], input_list_temp[split_index:]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5303bea2",
+   "execution_count": 26,
+   "id": "628c8dff-fcd4-41da-80d1-c4cb53a7728a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "only_valid_recordings = invalid_recordings_df[invalid_recordings_df[\"recording_invalid\"] == False]\n",
+    "valid_ids = list(only_valid_recordings[\"user_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "54601b83-1019-449f-8b68-c9a608198662",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "only_valid_recordings = full_meta_data[full_meta_data[\"recording_invalid\"] == False]\n",
+    "only_valid_recordings = only_valid_recordings.dropna(subset=\"covid_label\")\n",
+    "pos_ids = only_valid_recordings[only_valid_recordings[\"covid_label\"] == 1.0]\n",
+    "neg_ids = only_valid_recordings[only_valid_recordings[\"covid_label\"] == 0.0]\n",
+    "pos_ids, neg_ids = list(pos_ids[\"user_id\"]), list(neg_ids[\"user_id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1f26eead-b22d-4771-9ba6-0d6078651011",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traineval_pos, test_pos = randomly_split_list_into_two(pos_ids, ratio=0.85, random_seed=666)\n",
+    "traineval_neg, test_neg = randomly_split_list_into_two(neg_ids, ratio=0.85, random_seed=666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "cd70c45f-6304-452d-b688-982b9c5feca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set = test_pos + test_neg\n",
+    "traineval_set = traineval_pos + traineval_neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "2fe9ebdd-561b-41fd-8ac4-67fe492390c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0    260\n",
+       " 1.0     97\n",
+       " Name: covid_label, dtype: int64,\n",
+       " 0.0    1467\n",
+       " 1.0     545\n",
+       " Name: covid_label, dtype: int64)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_set_full_df = full_meta_data[full_meta_data[\"user_id\"].isin(test_set)]\n",
+    "traineval_full_df = full_meta_data[full_meta_data[\"user_id\"].isin(traineval_set)]\n",
+    "test_set_full_df[\"covid_label\"].value_counts(), traineval_full_df[\"covid_label\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "c3c10f53-dea8-4a84-8861-8ddfeb09a314",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set_full_df.to_csv(\"data/Coswara_processed/test_set_df.csv\", index=False)\n",
+    "traineval_full_df.to_csv(\"data/Coswara_processed/train_and_validation_set_df.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "8d5f57e4-d57c-4a92-8e22-043be8ea118c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    357\n",
+       "Name: recording_invalid, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_set_full_df[\"recording_invalid\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "5bdeab9f-15a7-44bc-93b5-bca35c8f74d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7894736842105263, 0.75, 0.7675070028011205)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3000/3800, 300/400, 274/357"
+   ]
   }
  ],
  "metadata": {
