--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,25 +36,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-11_brogrammers_15_mfccs_added_time_domain_augm.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-14_resnet18_logmel_1_channel_breath_resnet_breath.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
       "           smoothing:                     10\n",
       "           ignore_first_n_epochs:         5\n",
       "Datasets used:\n",
-      "15_mfccs\n",
-      "           dataset_class:                 <class 'datasets.BrogrammersMFCCDataset'>\n",
-      "           participants_file:             participants_validLabelsOnly.pickle\n",
-      "           augmented_files:               ['participants_oversampledPositives.pickle']\n",
-      "\n",
-      "Model used:\n",
-      "brogrammers\n",
+      "logmel_1_channel_breath\n",
+      "           dataset_class:                 <class 'datasets.ResnetLogmel1ChannelBreath'>\n",
+      "           participants_file:             2022-12-11_logmel_1_channel_noAug_heavy_breathing.pickle\n",
+      "           augmented_files:               ['2022-12-11_logmel_1_channel_augmented_heavy_breathing.pickle']\n",
+      "           model:                         ResNet\n",
+      "           optimizer:                     Adam \n",
+      "           loss_function:                 BCEWithLogitsLoss\n",
       "\n",
       "Tracker contains:\n",
-      ">>  54 <<  parameter runs\n",
-      ">>  5 <<  folds per run\n",
-      ">> 50 <<  epochs\n"
+      ">>  1 <<  parameter runs\n",
+      ">>  10 <<  folds per run\n",
+      ">> 40 <<  epochs\n"
      ]
     }
    ],
@@ -79,12 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Parameters used for finding the best performing epoch:\n",
+      "           metric_used:                   auc_roc\n",
+      "           smoothing:                     10\n",
+      "           ignore_first_n_epochs:         10\n"
+     ]
+    }
+   ],
    "source": [
-    "# tracker.compute_overall_metrics(smooth_n_samples=10, ignore_first_n_epochs=5, metric_used_for_performance_analysis=\"auc_roc\")"
+    "tracker.compute_overall_metrics(smooth_n_samples=10, ignore_first_n_epochs=10, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
   },
   {
@@ -103,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3f576f3d3454ed985937f49877b72bb",
+       "model_id": "83cd2120665c472da704ba1899c9139a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,25 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e9058870ec041b1aa7df91afd9c8227",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='metric', options=('auc_roc', 'loss', 'accuracy', 'f1_score', 'auc_…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hyperparameters = (list(tracker.crossval_runs[0].parameters.keys()))\n",
     "_ = widgets.interact(tracker.boxplot_run_statistics, metric=tracker.metrics_used,\n",
@@ -192,25 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0248285aeb0846c5acdf715ba09db5af",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='mode', options=('eval', 'train'), value='eval'), Dropdown(descript…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = widgets.interact(tracker.show_all_runs, \n",
     "                 mode=[\"eval\", \"train\"], \n",
@@ -223,19 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3f4a663e54944c4b974925080bd1127",
+       "model_id": "d5f4c3ef08864ddb8baada9f61c99abb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '0.001', 'wd': '0.001', '…"
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '1e-05', 'wd': '0.0001', …"
       ]
      },
      "metadata": {},
