make everything work with new feature set

--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -28,38 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-14_resnet18_logmel_1_channel_breath_resnet_breath.pickle\n",
-      "\n",
-      "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   auc_roc\n",
-      "           smoothing:                     10\n",
-      "           ignore_first_n_epochs:         5\n",
-      "Datasets used:\n",
-      "logmel_1_channel_breath\n",
-      "           dataset_class:                 <class 'datasets.ResnetLogmel1ChannelBreath'>\n",
-      "           participants_file:             2022-12-11_logmel_1_channel_noAug_heavy_breathing.pickle\n",
-      "           augmented_files:               ['2022-12-11_logmel_1_channel_augmented_heavy_breathing.pickle']\n",
-      "           model:                         ResNet\n",
-      "           optimizer:                     Adam \n",
-      "           loss_function:                 BCEWithLogitsLoss\n",
-      "\n",
-      "Tracker contains:\n",
-      ">>  1 <<  parameter runs\n",
-      ">>  10 <<  folds per run\n",
-      ">> 40 <<  epochs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tracker = load_tracker()"
+    "tracker = load_tracker()\n",
+    "tracker.get_feature_set_parameters_df(show_augmentations=True)"
    ]
   },
   {
@@ -79,22 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Parameters used for finding the best performing epoch:\n",
-      "           metric_used:                   auc_roc\n",
-      "           smoothing:                     10\n",
-      "           ignore_first_n_epochs:         10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tracker.compute_overall_metrics(smooth_n_samples=10, ignore_first_n_epochs=10, metric_used_for_performance_analysis=\"auc_roc\")"
    ]
@@ -115,25 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83cd2120665c472da704ba1899c9139a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='sort_descending_by_metric', options=('auc_roc', 'loss', 'accuracy'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sortby(sort_descending_by_metric, highlight_hyperparameters, show_full_df, **kwargs):\n",
     "    # thresholds = {\"auc_roc\": auc_threshold}\n",
@@ -208,22 +148,7 @@
    "execution_count": null,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5f4c3ef08864ddb8baada9f61c99abb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '32', 'lr': '1e-05', 'wd': '0.0001', …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                     \n",
@@ -234,21 +159,13 @@
     "                 show_separate_folds=True, \n",
     "                 show_std_area_plot=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fb1a3fe-16fc-4f09-b249-5954fe68fb2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (python_v3-8)",
+   "display_name": "ai38",
    "language": "python",
-   "name": "python_v3-8"
+   "name": "ai38"
   },
   "language_info": {
    "codemirror_mode": {
